2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added Simplified Chinese translation. Also updated the following
	translations: Polish, Dutch, German. Great thanks to all translators.
	
2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Suppress content-range error when 'Content-Range' response header
	doesn't contains bytes-unit specifier 'bytes'
	* src/HttpHeader.cc (getRange)
	* test/HttpHeaderTest.cc
	
2008-03-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compilation error with g++-4.3

2008-03-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added missing include files for MinGW
	* test/HttpHeaderProcessorTest.cc
	* test/DHTRoutingTableSerializerTest.cc
	* test/DHTRoutingTableDeserializerTest.cc
	* test/UriListParserTest.cc

2008-03-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Now download line is printed nicely with no garbage at the end of
	line. I use ioctl to get the columns of terminal.
	If stdout is redirected to another device, instead of carriage return,
	end of line '\n' character is used. This is feature request#1909659
	* src/ConsoleStatCalc.cc (calculateStat)

2008-03-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Included a2time.h
	* src/DHTMessageDispatcher.h
	* src/DHTMessageEntry.h
	* src/DHTReplaceNodeTask.h
	* src/DHTMessageTracker.h
	* src/Util.h
	* src/CookieBox.h
	* src/SocketCore.h
	* src/DefaultBtMessageDispatcher.h
	* src/SocketCore.cc
	* src/Util.cc
	* src/DHTPingTask.h

2008-03-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed high memory footprint when DHT is enabled.
	This is not a memory leak, but DHTReplaceNodeTask is more frequently
	queued than it is processed and the queue is getting longer. As a
	consequence, momory usage is increased.
	As for a fix, instead of issuing DHTReplaceNodeTask, I've implemented
	replacement cache in DHTBucket which is described in Kademlia paper.
	* src/DHTRoutingTable.cc (addNode): Removed the issuing of